--- a/style.css
+++ b/style.css
@@ -162,13 +162,13 @@ form input[type="submit"]:hover {
 }
 
 .bottom-pic1 {
-  width: 20%;
+  width: 30px;
   height: auto;
   text-align: center;
 }
 
 .bottom-pic2 {
-  width: 20%;
+  width: 30px;
   height: auto;
   text-align: center;
 }
